--- a/maps/templates/base_content.html
+++ b/maps/templates/base_content.html
@@ -6,7 +6,9 @@
 {% endblock title %}
 </div>
 <div id="wrapper">
-    <div id="mapwrap"><div id="map"></div></div>
+  <div id="mapwrap">
+    <div id="map"></div>
+  </div>
     <div id="graphwrap"><div id="graph">
         <img id="plot" 
                     src="data:image/svg+xml;base64,{{g|safe}}" 
