Fixed a bug with anchor links on homepage and now using plotly for the graphs

--- a/maps/templates/base_content.html
+++ b/maps/templates/base_content.html
@@ -10,10 +10,15 @@
     <div id="map"></div>
   </div>
     <div id="graphwrap"><div id="graph">
-        <img id="plot" 
-                    src="data:image/svg+xml;base64,{{g|safe}}" 
-                    alt="Click on the map to get started!"
-                    onerror="this.style.display='none';">
+        <div id="my_plot">
+          {% autoescape off%}
+            {{testPlot|safe}}
+          {% endautoescape %}
+        </div>
+        <!-- <img id="plot" --> 
+        <!--             src="data:image/svg+xml;base64,{{g|safe}}" --> 
+        <!--             alt="Click on the map to get started!" -->
+        <!--             onerror="this.style.display='none';"> -->
                     <!-- document.getElementById('start').style.display= -->
                     <!-- 'block'"> -->
         {% block explanation %}
