--- a/maps/templates/base.html
+++ b/maps/templates/base.html
@@ -7,6 +7,7 @@
     {% load static %}
     <script src="{% static "js/errors.js" %}"></script>
     <script src="{% static "js/jquery-3.4.1.min.js" %}"></script>
+    <script src="{% static "js/plotly-latest.min.js" %}"></script>
     <script src="https://api.mapbox.com/mapbox-gl-js/v1.9.0/mapbox-gl.js"></script>
     <link href="https://api.mapbox.com/mapbox-gl-js/v1.9.0/mapbox-gl.css" rel="stylesheet" />
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
